removed old files, updated readme

--- a/README.html
+++ b/README.html
@@ -6,9 +6,13 @@
 
 <h3>Compatibility</h3>
 
-<p>This ACF field type is compatible with:
-* ACF 5
-* ACF 4</p>
+<p>This ACF field type is compatible with:</p>
+
+<ul>
+<li>ACF 5</li>
+<li>ACF 4</li>
+</ul>
+
 
 <h3>Installation</h3>
 
@@ -36,5 +40,6 @@
 
 <h3>Changelog</h3>
 
-<p>5.0 - Refactored for ACF 5.0
-4.0 - Refactored for AFC 4.0 and above</p>
+<p>5.0 - Refactored for ACF 5.0</p>
+
+<p>4.0 - Refactored for AFC 4.0 and above</p>
